--- a/style.css
+++ b/style.css
@@ -27,8 +27,23 @@ nav {
     align-items: center;
 }
 .nav-left li a {
+    position: relative;
     text-decoration: none;
     color: #4D4D4D;
+}
+.nav-left li a::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -2px;
+  width: 0;
+  height: 1.5px;
+  background-color: #717171;
+  transition: all 1s ease;
+  transform: translateX(-50%);
+}
+.nav-left li a:hover::after {
+    width: 110%;
 }
 li {
     list-style: none;
@@ -40,7 +55,10 @@ li {
     border-radius: 3px;
     color: white;
 }
-.text2 h1 {
+.reg-btn:hover {
+    background-color: #419344;
+}
+.text2 , .text7 h1 {
     color: #4D4D4D;
     font-size: 45px;
 }
@@ -49,7 +67,6 @@ li {
     width: 1200px;
     margin: 5pc auto;
     align-items: center;
-    /* gap: 16pc; */
 }
 .text2 {
     line-height: 53px;
@@ -69,11 +86,9 @@ li {
 .thrd {
     display: flex;
     flex-direction: column;
-    /* margin: 0 auto; */
     text-align: center;
-    /* align-items: center; */
     line-height: 40px;
-    width: 1200px;
+    width: 1000px;
 }
 .logos {
     display: flex;
@@ -82,37 +97,176 @@ li {
     width: 1000px;
     padding-top: 30px;
 }
+
+.logos img:hover {
+    cursor: pointer;
+    transform: scale(1.3);
+    transition: 1s;
+}
 .fourth {
     display: flex;
     flex-direction: column;
-    /* margin: 0 auto; */
     text-align: center;
-    /* align-items: center; */
     line-height: 30px;
-    width: 1200px;
+    width: 1000px;
 }
 .fourth p {
     padding-top: 10px;
 }
-.image4 {
-    width: 45.23px !important;
-    height: 38.98px !important; 
+.text2 , .text3 , .text4 .text6  p {
+    font-size: 15px;
+    color: #717171;
+    line-height: 18px;
+}
+.text3 , .text4 , .text5 .text6 h3 {
+    color: #4D4D4D;
+}
+.cards-group4 {
+    display: flex;
+    flex-direction: row;
+    width: 900px;
+    justify-content: space-between;
 }
 .cd {
-    padding: 16.5px 22.5px;
-    width: 208px;
-    height: 182px;
-    /* height: 22.5px; */
+    width: 230px !important;
+    height: fit-content !important;
+    padding: 10px 14px !important;
+    line-height: 15px !important;
+    margin: 0px !important;
+    border: none !important;
+    box-shadow: 2.4px 2.5px 8px rgba(0, 0, 0, 0.05) !important;
+
 }
-/* .fourth-cards {
+.cd:hover {
+    transform: scale(1.07);
+    transition: 1s;
+    box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.05) !important;
+
+}
+.cd , .text5 p {
+    font-size: 12px;
+    color: #717171;
+}
+.cd-body {
+    padding: 1px !important;
+}
+.cd-title {
+    padding-top: 15px !important;
+}
+h4 {
+    font-weight: 600 !important;
+    color: #4D4D4D !important;
+}
+.fifth {
+    display: flex;
+    text-align: left;
+    width: 1000px;
+    justify-content: space-between;
+}
+.text5 {
+    width: 500px;
+}
+.sec-6 {
+    width: 1200px;
+    background-color: #F5F7FA;
+    padding: 30px 0px;
+}
+.sixth {
+    display: flex;
+    width: 1000px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 13px;
+}
+.right6 {
+    display: grid;
+    width: 400px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+}
+.whole {
+    display: flex;
+    align-items: center;
+}
+.whl-img {
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+.quantity {
+    font-size: 15px;
+    color: #717171;
+    line-height: 2px;
+}
+.seventh {
+    text-align: center;
+    background-color: #F5F7FA;
+    width: 1200px;
+    padding: 20px 0px 30px 0px;
+}
+.text7 .reg-btn {
+    margin-top: 20px;
+    align-items: center;
+}
+.last {
+    width: 1200px;
+    background-color: #263238;
+    padding: 30px 0px;
+    color: white;
+}
+.last8 {
+    display: flex;
+    width: 1000px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 13px;
+
+}
+.left8 {
+    display: flex;
+    flex-direction: column;
+    line-height: 0px;
+}
+.image8 {
+    margin-bottom: 30px;
+}
+.logos8 {
+    display: flex;
+    gap: 20px;
+    margin: 0px;
+    width: 150px;
+}
+.right8 {
     display: flex;
     justify-content: space-between;
-    width: 1200px;
+    width: 500px;
 }
-.card h2 {
-    line-height: 30px;
+.right8 , .text8 p {
+    font-size: 12px;
+    color: #F5F7FA;
+    line-height: 10px;
 }
-.card {
-    line-height: 20px;
-    width: 210px;
-} */
+.right8 h5 {
+    margin-bottom: 26px;
+}
+input {
+    background-color: #ffffff23;
+    height: 35px;
+    width: 190px;
+    border: none;
+    padding-left: 10px;
+    border-radius: 5px;
+    color: white;
+}
+input::placeholder {
+    color: white;
+}
+.input8 {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+}
+.send-img {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
